--- a/index.html
+++ b/index.html
@@ -2,43 +2,34 @@
 <html lang="zh">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Decision Engine</title>
+<title>Decision Engine Pro X</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
 
 body{
 font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",sans-serif;
-background:linear-gradient(180deg,#0b0b0b,#111,#0d0d0d);
+background:
+radial-gradient(circle at 20% 20%, #1a1a1a, transparent 40%),
+radial-gradient(circle at 80% 80%, #181818, transparent 50%),
+linear-gradient(180deg,#0b0b0b,#111);
 color:white;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:100px 20px;
+padding:90px 20px;
+min-height:100vh;
 }
 
-/* LANGUAGE SWITCH */
-.lang{
-position:absolute;
-top:30px;
-right:40px;
-color:#aaa;
-cursor:pointer;
-font-size:14px;
-}
-
-/* HERO */
 .hero{
 text-align:center;
 max-width:800px;
-margin-bottom:60px;
+margin-bottom:50px;
 }
 
 .hero h1{
-font-size:56px;
+font-size:54px;
 font-weight:700;
-line-height:1.05;
-letter-spacing:-1px;
 background:linear-gradient(90deg,#fff,#cfcfcf,#6b7280);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
@@ -49,195 +40,156 @@ margin-top:18px;
 color:#9ca3af;
 }
 
-/* CARD */
 .card{
 background:rgba(255,255,255,.05);
 backdrop-filter:blur(30px);
-padding:35px;
-border-radius:28px;
+padding:30px;
+border-radius:24px;
 width:100%;
-max-width:520px;
+max-width:620px;
 box-shadow:0 40px 100px rgba(0,0,0,.6);
+margin-bottom:30px;
 }
 
-.title{
-display:flex;
-align-items:center;
-gap:10px;
-margin-bottom:20px;
-font-size:18px;
+.section-title{
 font-weight:600;
-}
-
-.icon{
-width:34px;
-height:34px;
-background:rgba(255,255,255,.08);
-border-radius:10px;
-display:flex;
-align-items:center;
-justify-content:center;
-font-size:16px;
+margin-bottom:15px;
 }
 
 .label{
 font-size:13px;
 color:#9ca3af;
-margin-bottom:6px;
+margin-bottom:5px;
 }
 
 input{
 width:100%;
-padding:14px;
-border-radius:16px;
+padding:12px;
+border-radius:14px;
 border:1px solid rgba(255,255,255,.08);
 background:rgba(255,255,255,.03);
 color:white;
-margin-bottom:18px;
-font-size:15px;
+margin-bottom:15px;
 }
 
-input:focus{
-outline:none;
-border-color:#bfbfbf;
-background:rgba(255,255,255,.06);
-}
-
-/* RESULTS */
 .result{
-margin-top:10px;
-font-size:15px;
 display:flex;
 justify-content:space-between;
-margin-bottom:8px;
+padding-top:8px;
+margin-top:6px;
+border-top:1px solid rgba(255,255,255,.05);
+font-size:14px;
 }
 
-.value{
-font-weight:600;
-}
-
+.value{font-weight:600;}
 .green{color:#22c55e;}
 .red{color:#ef4444;}
+.yellow{color:#facc15;}
 .gray{color:#e5e7eb;}
 </style>
 </head>
 
 <body>
 
-<div class="lang" onclick="toggleLang()">中文 / English</div>
-
 <div class="hero">
-<h1 id="heroTitle">Make calculated<br>decisions, every time.</h1>
-<p id="heroSub">Calculate the exact long-term outcome before taking the risk.</p>
+<h1>Decision Engine Pro X</h1>
+<p>Investment • Startup • Poker • Risk Evaluation</p>
 </div>
 
 <div class="card">
 
-<div class="title">
-<div class="icon">⌘</div>
-<span id="cardTitle">Expected Value</span>
+<div class="section-title">Option A</div>
+
+<div class="label">Probability (0~1)</div>
+<input type="number" id="p1" step="0.01">
+
+<div class="label">Reward</div>
+<input type="number" id="r1">
+
+<div class="label">Cost</div>
+<input type="number" id="c1">
+
+<div class="result"><span>Expected Value</span><span class="value gray" id="ev1">-</span></div>
+<div class="result"><span>ROI</span><span class="value gray" id="roi1">-</span></div>
+<div class="result"><span>Break-even</span><span class="value gray" id="be1">-</span></div>
+<div class="result"><span>Kelly %</span><span class="value gray" id="kelly1">-</span></div>
+<div class="result"><span>Worth</span><span class="value gray" id="worth1">-</span></div>
+<div class="result"><span>Risk Level</span><span class="value gray" id="risk1">-</span></div>
+
 </div>
 
-<div class="label" id="labelP">Probability (0~1)</div>
-<input type="number" id="p" step="0.01">
+<div class="card">
 
-<div class="label" id="labelR">Reward</div>
-<input type="number" id="r">
+<div class="section-title">Option B</div>
 
-<div class="label" id="labelC">Cost</div>
-<input type="number" id="c">
+<div class="label">Probability (0~1)</div>
+<input type="number" id="p2" step="0.01">
 
-<div class="label" id="labelB">Bankroll (for Kelly)</div>
-<input type="number" id="bank">
+<div class="label">Reward</div>
+<input type="number" id="r2">
 
-<div class="result">
-<span id="evText">Expected Value</span>
-<span class="value gray" id="ev">-</span>
-</div>
+<div class="label">Cost</div>
+<input type="number" id="c2">
 
-<div class="result">
-<span>ROI</span>
-<span class="value gray" id="roi">-</span>
-</div>
-
-<div class="result">
-<span id="breakText">Break-even Probability</span>
-<span class="value gray" id="break">-</span>
-</div>
-
-<div class="result">
-<span id="kellyText">Kelly Suggested Bet</span>
-<span class="value gray" id="kelly">-</span>
-</div>
+<div class="result"><span>Expected Value</span><span class="value gray" id="ev2">-</span></div>
+<div class="result"><span>ROI</span><span class="value gray" id="roi2">-</span></div>
+<div class="result"><span>Break-even</span><span class="value gray" id="be2">-</span></div>
+<div class="result"><span>Kelly %</span><span class="value gray" id="kelly2">-</span></div>
+<div class="result"><span>Worth</span><span class="value gray" id="worth2">-</span></div>
+<div class="result"><span>Risk Level</span><span class="value gray" id="risk2">-</span></div>
 
 </div>
 
 <script>
-let zh=false;
-
-function toggleLang(){
-zh=!zh;
-
-document.getElementById("heroTitle").innerHTML=
-zh?"每一次都做出<br>精準決策":"Make calculated<br>decisions, every time.";
-
-document.getElementById("heroSub").innerText=
-zh?"在承擔風險前，先計算長期結果。":"Calculate the exact long-term outcome before taking the risk.";
-
-document.getElementById("cardTitle").innerText=
-zh?"期望值計算":"Expected Value";
-
-document.getElementById("labelP").innerText=
-zh?"機率 (0~1)":"Probability (0~1)";
-
-document.getElementById("labelR").innerText=
-zh?"獎勵":"Reward";
-
-document.getElementById("labelC").innerText=
-zh?"成本":"Cost";
-
-document.getElementById("labelB").innerText=
-zh?"總資金 (Kelly)":"Bankroll (for Kelly)";
-
-document.getElementById("evText").innerText=
-zh?"期望值":"Expected Value";
-
-document.getElementById("breakText").innerText=
-zh?"損益平衡機率":"Break-even Probability";
-
-document.getElementById("kellyText").innerText=
-zh?"Kelly 建議下注":"Kelly Suggested Bet";
-}
-
-const inputs=document.querySelectorAll("input");
-inputs.forEach(i=>i.addEventListener("input",calculate));
+document.querySelectorAll("input").forEach(i=>i.addEventListener("input",calculate));
 
 function calculate(){
 
-let p=parseFloat(p.value);
-let r=parseFloat(r.value);
-let c=parseFloat(c.value);
-let bank=parseFloat(bank.value);
+calculateOption("1");
+calculateOption("2");
+
+}
+
+function calculateOption(id){
+
+let p=parseFloat(document.getElementById("p"+id).value);
+let r=parseFloat(document.getElementById("r"+id).value);
+let c=parseFloat(document.getElementById("c"+id).value);
 
 if(isNaN(p)||isNaN(r)||isNaN(c)){
-document.getElementById("ev").innerText="-";
-document.getElementById("roi").innerText="-";
-document.getElementById("break").innerText="-";
-document.getElementById("kelly").innerText="-";
+reset(id);
 return;
 }
 
 let ev=p*r-c;
 let roi=(ev/c)*100;
-let breakeven=c/r;
+let be=c/r;
 let b=(r-c)/c;
-let kellyFraction=(p*(b+1)-1)/b;
-let kellyAmount=bank?bank*kellyFraction:0;
+let k=(p*(b+1)-1)/b*100;
 
-update("ev",ev);
-update("roi",roi.toFixed(2)+"%");
-update("break",breakeven.toFixed(2));
-update("kelly",bank?kellyAmount.toFixed(2):"-");
+update("ev"+id,ev);
+update("roi"+id,roi.toFixed(2)+"%");
+update("be"+id,be.toFixed(2));
+update("kelly"+id,k.toFixed(2)+"%");
+
+let worthText="Neutral";
+let worthColor="gray";
+
+if(ev>0 && roi>20){worthText="Strong Positive EV";worthColor="green";}
+else if(ev>0){worthText="Slight Edge";worthColor="yellow";}
+else if(ev<0){worthText="Negative EV";worthColor="red";}
+
+setText("worth"+id,worthText,worthColor);
+
+let riskRatio=Math.abs(ev)/c;
+let riskText="Moderate";
+let riskColor="yellow";
+
+if(riskRatio>0.5){riskText="Low Risk";riskColor="green";}
+else if(riskRatio<0.1){riskText="High Risk";riskColor="red";}
+
+setText("risk"+id,riskText,riskColor);
+
 }
 
 function update(id,value){
@@ -245,10 +197,24 @@ let el=document.getElementById(id);
 el.innerText=value;
 
 if(typeof value==="number"){
-if(value>0){el.className="value green";}
-else if(value<0){el.className="value red";}
-else{el.className="value gray";}
+if(value>0) el.className="value green";
+else if(value<0) el.className="value red";
+else el.className="value gray";
 }
+}
+
+function setText(id,text,color){
+let el=document.getElementById(id);
+el.innerText=text;
+el.className="value "+color;
+}
+
+function reset(id){
+["ev","roi","be","kelly","worth","risk"].forEach(prefix=>{
+let el=document.getElementById(prefix+id);
+el.innerText="-";
+el.className="value gray";
+});
 }
 </script>
 
