--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Decision Engine Pro X</title>
+<title>Decision Engine Pro</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
@@ -30,68 +30,42 @@ color:#9ca3af;
 font-size:14px;
 }
 
-/* Badge */
 .badge{
 background:rgba(255,255,255,.05);
 padding:6px 18px;
 border-radius:999px;
 font-size:12px;
-letter-spacing:.4px;
 margin-bottom:25px;
 color:#cfcfcf;
 }
 
-/* Hero */
 .hero{
 text-align:center;
 max-width:800px;
-margin-bottom:50px;
+margin-bottom:40px;
 }
 
 .hero h1{
-font-size:56px;
+font-size:54px;
 font-weight:700;
-line-height:1.05;
 background:linear-gradient(90deg,#fff,#cfcfcf,#6b7280);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:18px;
+margin-top:15px;
 color:#9ca3af;
 }
 
-/* Card */
 .card{
 background:rgba(255,255,255,.05);
 backdrop-filter:blur(25px);
-padding:30px;
+padding:28px;
 border-radius:22px;
 width:100%;
-max-width:580px;
+max-width:560px;
 box-shadow:0 40px 100px rgba(0,0,0,.6);
-margin-bottom:25px;
-}
-
-.section-title{
-font-weight:600;
-margin-bottom:18px;
-font-size:16px;
-display:flex;
-align-items:center;
-gap:8px;
-}
-
-.icon{
-width:28px;
-height:28px;
-background:rgba(255,255,255,.08);
-border-radius:8px;
-display:flex;
-align-items:center;
-justify-content:center;
-font-size:14px;
 }
 
 .label{
@@ -126,11 +100,22 @@ font-size:13px;
 }
 
 .value{font-weight:600;}
-
 .green{color:#22c55e;}
 .red{color:#ef4444;}
 .yellow{color:#facc15;}
 .gray{color:#e5e7eb;}
+
+button{
+margin-top:18px;
+width:100%;
+padding:10px;
+border-radius:12px;
+background:#fff;
+color:#000;
+border:none;
+cursor:pointer;
+font-weight:600;
+}
 </style>
 </head>
 
@@ -142,54 +127,32 @@ font-size:13px;
 
 <div class="hero">
 <h1 id="title">Make calculated decisions.</h1>
-<p id="subtitle">Compare opportunities before committing capital.</p>
+<p id="subtitle">Evaluate risk before committing capital.</p>
 </div>
 
 <div class="card">
-<div class="section-title">
-<div class="icon">A</div>
-<span id="optATitle">Option A</span>
-</div>
 
-<div class="label" id="p1Label">Probability (0~1)</div>
-<input type="number" id="p1" step="0.01">
+<div class="label" id="pLabel">Probability (0~1)</div>
+<input type="number" id="p" step="0.01">
 
-<div class="label" id="r1Label">Reward</div>
-<input type="number" id="r1">
+<div class="label" id="rLabel">Reward</div>
+<input type="number" id="r">
 
-<div class="label" id="c1Label">Cost</div>
-<input type="number" id="c1">
+<div class="label" id="cLabel">Cost</div>
+<input type="number" id="c">
 
-<div class="result"><span id="evText1">Expected Value</span><span class="value gray" id="ev1">-</span></div>
-<div class="result"><span>ROI</span><span class="value gray" id="roi1">-</span></div>
-<div class="result"><span id="beText1">Break-even</span><span class="value gray" id="be1">-</span></div>
-<div class="result"><span id="kellyText1">Kelly %</span><span class="value gray" id="kelly1">-</span></div>
-<div class="result"><span id="worthText1">Worth</span><span class="value gray" id="worth1">-</span></div>
-</div>
+<div class="result"><span id="evText">Expected Value</span><span class="value gray" id="ev">-</span></div>
+<div class="result"><span>ROI</span><span class="value gray" id="roi">-</span></div>
+<div class="result"><span id="beText">Break-even</span><span class="value gray" id="be">-</span></div>
+<div class="result"><span id="kellyText">Kelly %</span><span class="value gray" id="kelly">-</span></div>
+<div class="result"><span id="worthText">Worth</span><span class="value gray" id="worth">-</span></div>
 
-<div class="card">
-<div class="section-title">
-<div class="icon">B</div>
-<span id="optBTitle">Option B</span>
-</div>
+<button onclick="simulate()">Simulate 100 Runs</button>
 
-<div class="label" id="p2Label">Probability (0~1)</div>
-<input type="number" id="p2" step="0.01">
-
-<div class="label" id="r2Label">Reward</div>
-<input type="number" id="r2">
-
-<div class="label" id="c2Label">Cost</div>
-<input type="number" id="c2">
-
-<div class="result"><span id="evText2">Expected Value</span><span class="value gray" id="ev2">-</span></div>
-<div class="result"><span>ROI</span><span class="value gray" id="roi2">-</span></div>
-<div class="result"><span id="beText2">Break-even</span><span class="value gray" id="be2">-</span></div>
-<div class="result"><span id="kellyText2">Kelly %</span><span class="value gray" id="kelly2">-</span></div>
-<div class="result"><span id="worthText2">Worth</span><span class="value gray" id="worth2">-</span></div>
 </div>
 
 <script>
+
 let zh=false;
 
 function toggleLang(){
@@ -197,46 +160,28 @@ zh=!zh;
 
 document.getElementById("badge").innerText = zh?"進階決策引擎":"Advanced Decision Engine";
 document.getElementById("title").innerText = zh?"做出精準決策":"Make calculated decisions.";
-document.getElementById("subtitle").innerText = zh?"在投入資金前先比較機會":"Compare opportunities before committing capital.";
+document.getElementById("subtitle").innerText = zh?"在投入資金前先評估風險":"Evaluate risk before committing capital.";
 
-document.getElementById("optATitle").innerText = zh?"方案 A":"Option A";
-document.getElementById("optBTitle").innerText = zh?"方案 B":"Option B";
+document.getElementById("pLabel").innerText = zh?"機率 (0~1)":"Probability (0~1)";
+document.getElementById("rLabel").innerText = zh?"獎勵":"Reward";
+document.getElementById("cLabel").innerText = zh?"成本":"Cost";
 
-document.getElementById("p1Label").innerText = zh?"機率 (0~1)":"Probability (0~1)";
-document.getElementById("r1Label").innerText = zh?"獎勵":"Reward";
-document.getElementById("c1Label").innerText = zh?"成本":"Cost";
-
-document.getElementById("p2Label").innerText = zh?"機率 (0~1)":"Probability (0~1)";
-document.getElementById("r2Label").innerText = zh?"獎勵":"Reward";
-document.getElementById("c2Label").innerText = zh?"成本":"Cost";
-
-document.getElementById("evText1").innerText = zh?"期望值":"Expected Value";
-document.getElementById("evText2").innerText = zh?"期望值":"Expected Value";
-document.getElementById("beText1").innerText = zh?"損益平衡":"Break-even";
-document.getElementById("beText2").innerText = zh?"損益平衡":"Break-even";
-document.getElementById("kellyText1").innerText = zh?"Kelly 比例":"Kelly %";
-document.getElementById("kellyText2").innerText = zh?"Kelly 比例":"Kelly %";
-document.getElementById("worthText1").innerText = zh?"價值判斷":"Worth";
-document.getElementById("worthText2").innerText = zh?"價值判斷":"Worth";
+document.getElementById("evText").innerText = zh?"期望值":"Expected Value";
+document.getElementById("beText").innerText = zh?"損益平衡":"Break-even";
+document.getElementById("kellyText").innerText = zh?"Kelly 比例":"Kelly %";
+document.getElementById("worthText").innerText = zh?"價值判斷":"Worth";
 }
 
 document.querySelectorAll("input").forEach(i=>i.addEventListener("input",calculate));
 
 function calculate(){
-calculateOption("1");
-calculateOption("2");
-}
 
-function calculateOption(id){
-let p=parseFloat(document.getElementById("p"+id).value);
-let r=parseFloat(document.getElementById("r"+id).value);
-let c=parseFloat(document.getElementById("c"+id).value);
+let p=parseFloat(document.getElementById("p").value);
+let r=parseFloat(document.getElementById("r").value);
+let c=parseFloat(document.getElementById("c").value);
 
 if(isNaN(p)||isNaN(r)||isNaN(c)){
-["ev","roi","be","kelly","worth"].forEach(prefix=>{
-document.getElementById(prefix+id).innerText="-";
-document.getElementById(prefix+id).className="value gray";
-});
+reset();
 return;
 }
 
@@ -246,17 +191,53 @@ let be=c/r;
 let b=(r-c)/c;
 let k=(p*(b+1)-1)/b*100;
 
-setValue("ev"+id,ev);
-setValue("roi"+id,roi.toFixed(2)+"%");
-setValue("be"+id,be.toFixed(2));
-setValue("kelly"+id,k.toFixed(2)+"%");
+setValue("ev",ev);
+setValue("roi",roi.toFixed(2)+"%");
+setValue("be",be.toFixed(2));
+setValue("kelly",k.toFixed(2)+"%");
 
 let worth="Neutral";
 let color="gray";
+
 if(ev>0&&roi>20){worth="Strong Positive EV";color="green";}
 else if(ev>0){worth="Slight Edge";color="yellow";}
 else if(ev<0){worth="Negative EV";color="red";}
-setText("worth"+id,worth,color);
+
+setText("worth",worth,color);
+}
+
+function simulate(){
+
+let p=parseFloat(document.getElementById("p").value);
+let r=parseFloat(document.getElementById("r").value);
+let c=parseFloat(document.getElementById("c").value);
+
+if(isNaN(p)||isNaN(r)||isNaN(c)) return;
+
+let capital=0;
+let wins=0;
+let peak=0;
+let maxDrawdown=0;
+
+for(let i=0;i<100;i++){
+if(Math.random()<p){
+capital+=r-c;
+wins++;
+}else{
+capital-=c;
+}
+
+if(capital>peak) peak=capital;
+let drawdown=peak-capital;
+if(drawdown>maxDrawdown) maxDrawdown=drawdown;
+}
+
+alert(
+"Simulation (100 Runs)\n\n"+
+"Total Profit: "+capital+"\n"+
+"Wins: "+wins+"\n"+
+"Max Drawdown: "+maxDrawdown
+);
 }
 
 function setValue(id,val){
@@ -274,6 +255,14 @@ let el=document.getElementById(id);
 el.innerText=text;
 el.className="value "+color;
 }
+
+function reset(){
+["ev","roi","be","kelly","worth"].forEach(id=>{
+document.getElementById(id).innerText="-";
+document.getElementById(id).className="value gray";
+});
+}
+
 </script>
 
 </body>
