--- a/index.html
+++ b/index.html
@@ -10,70 +10,74 @@
 body{
 font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",sans-serif;
 background:
-radial-gradient(circle at 20% 20%, #1c1c1c, transparent 40%),
-radial-gradient(circle at 80% 80%, #181818, transparent 50%),
-linear-gradient(180deg,#0b0b0b,#111);
+radial-gradient(circle at 20% 20%, #1c1c1c 0%, transparent 40%),
+radial-gradient(circle at 80% 80%, #111 0%, transparent 50%),
+linear-gradient(180deg,#000,#0a0a0a);
 color:white;
+min-height:100vh;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:90px 20px;
-min-height:100vh;
+padding:80px 20px;
 }
 
 .lang{
 position:absolute;
 top:30px;
 right:40px;
-cursor:pointer;
-color:#9ca3af;
 font-size:14px;
+color:#aaa;
+cursor:pointer;
 }
 
 /* HERO */
 .hero{
 text-align:center;
-max-width:800px;
-margin-bottom:40px;
+max-width:900px;
+margin-bottom:50px;
 }
 
 .hero h1{
-font-size:56px;
+font-size:60px;
 font-weight:700;
-background:linear-gradient(90deg,#fff,#cfcfcf,#6b7280);
+line-height:1.1;
+background:linear-gradient(90deg,#fff,#cfcfcf,#7a7a7a);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:15px;
+margin-top:16px;
 color:#9ca3af;
+font-size:16px;
 }
 
 /* CARD */
 .card{
-background:rgba(255,255,255,.05);
-backdrop-filter:blur(25px);
-padding:30px;
-border-radius:22px;
+background:#111;
+border:1px solid #222;
+padding:32px;
+border-radius:24px;
 width:100%;
 max-width:560px;
-box-shadow:0 40px 100px rgba(0,0,0,.6);
+box-shadow:0 40px 120px rgba(0,0,0,.8);
 }
 
-.header{
+.card-header{
 display:flex;
 align-items:center;
-gap:10px;
-margin-bottom:20px;
+gap:12px;
+margin-bottom:22px;
 font-weight:600;
+font-size:18px;
 }
 
 .icon{
-width:32px;
-height:32px;
-background:rgba(255,255,255,.08);
-border-radius:8px;
+width:38px;
+height:38px;
+background:#1a1a1a;
+border:1px solid #2a2a2a;
+border-radius:10px;
 display:flex;
 align-items:center;
 justify-content:center;
@@ -81,51 +85,70 @@ justify-content:center;
 
 .label{
 font-size:12px;
-color:#9ca3af;
-margin-bottom:4px;
+color:#aaa;
+margin-bottom:6px;
 }
 
 input{
 width:100%;
 padding:12px;
 border-radius:14px;
-border:1px solid rgba(255,255,255,.08);
-background:rgba(255,255,255,.03);
+border:1px solid #2a2a2a;
+background:#0f0f0f;
 color:white;
-margin-bottom:12px;
+margin-bottom:14px;
+font-size:14px;
 }
 
+input:focus{
+outline:none;
+border:1px solid #555;
+}
+
+/* results */
 .result{
 display:flex;
 justify-content:space-between;
-padding-top:6px;
-margin-top:6px;
-border-top:1px solid rgba(255,255,255,.05);
+padding:8px 0;
 font-size:13px;
+border-bottom:1px solid #1f1f1f;
 }
 
-.value{font-weight:600;}
+.value{
+font-weight:600;
+}
+
 .green{color:#22c55e;}
 .red{color:#ef4444;}
 .yellow{color:#facc15;}
 .gray{color:#e5e7eb;}
 
+/* button */
 button{
-margin-top:15px;
+margin-top:20px;
 width:100%;
-padding:10px;
-border-radius:12px;
+padding:14px;
+border-radius:14px;
+border:none;
 background:#fff;
 color:#000;
-border:none;
-cursor:pointer;
 font-weight:600;
+cursor:pointer;
+transition:0.2s;
 }
 
+button:hover{
+opacity:0.85;
+}
+
+/* simulation */
 .sim-box{
-margin-top:15px;
+margin-top:16px;
 font-size:13px;
-color:#9ca3af;
+color:#aaa;
+white-space:pre-line;
+padding-top:10px;
+border-top:1px solid #222;
 }
 </style>
 </head>
@@ -136,13 +159,20 @@ color:#9ca3af;
 
 <div class="hero">
 <h1 id="title">Make calculated decisions.</h1>
-<p id="subtitle">Evaluate risk before committing capital.</p>
+<p id="subtitle">Evaluate long-term outcomes before risking capital.</p>
 </div>
 
 <div class="card">
 
-<div class="header">
-<div class="icon">🧮</div>
+<div class="card-header">
+<div class="icon">
+<svg width="18" height="18" stroke="#bbb" fill="none" viewBox="0 0 24 24">
+<rect x="4" y="3" width="16" height="18" rx="2"/>
+<line x1="8" y1="8" x2="16" y2="8"/>
+<line x1="8" y1="12" x2="12" y2="12"/>
+<line x1="8" y1="16" x2="12" y2="16"/>
+</svg>
+</div>
 <span id="cardTitle">Expected Value Calculator</span>
 </div>
 
@@ -172,31 +202,26 @@ let zh=false;
 
 function toggleLang(){
 zh=!zh;
-
-document.getElementById("title").innerText = zh?"做出精準決策":"Make calculated decisions.";
-document.getElementById("subtitle").innerText = zh?"在投入資金前先評估風險":"Evaluate risk before committing capital.";
-document.getElementById("cardTitle").innerText = zh?"期望值計算器":"Expected Value Calculator";
-document.getElementById("pLabel").innerText = zh?"機率 (0~1)":"Probability (0~1)";
-document.getElementById("rLabel").innerText = zh?"獎勵":"Reward";
-document.getElementById("cLabel").innerText = zh?"成本":"Cost";
-document.getElementById("evText").innerText = zh?"期望值":"Expected Value";
-document.getElementById("beText").innerText = zh?"損益平衡":"Break-even";
-document.getElementById("kellyText").innerText = zh?"Kelly 比例":"Kelly %";
-document.getElementById("worthText").innerText = zh?"價值判斷":"Worth";
-document.getElementById("simBtn").innerText = zh?"模擬 100 次":"Simulate 100 Runs";
+title.innerText=zh?"做出精準決策":"Make calculated decisions.";
+subtitle.innerText=zh?"在投入資金前先評估長期結果":"Evaluate long-term outcomes before risking capital.";
+cardTitle.innerText=zh?"期望值計算器":"Expected Value Calculator";
+pLabel.innerText=zh?"機率 (0~1)":"Probability (0~1)";
+rLabel.innerText=zh?"獎勵":"Reward";
+cLabel.innerText=zh?"成本":"Cost";
+evText.innerText=zh?"期望值":"Expected Value";
+beText.innerText=zh?"損益平衡":"Break-even";
+kellyText.innerText=zh?"Kelly 比例":"Kelly %";
+worthText.innerText=zh?"價值判斷":"Worth";
+simBtn.innerText=zh?"模擬 100 次":"Simulate 100 Runs";
 }
 
 document.querySelectorAll("input").forEach(i=>i.addEventListener("input",calculate));
 
 function calculate(){
-let p=parseFloat(document.getElementById("p").value);
-let r=parseFloat(document.getElementById("r").value);
-let c=parseFloat(document.getElementById("c").value);
-
-if(isNaN(p)||isNaN(r)||isNaN(c)){
-reset();
-return;
-}
+let p=parseFloat(p.value);
+let r=parseFloat(r.value);
+let c=parseFloat(c.value);
+if(isNaN(p)||isNaN(r)||isNaN(c)){reset();return;}
 
 let ev=p*r-c;
 let roi=(ev/c)*100;
@@ -204,47 +229,37 @@ let be=c/r;
 let b=(r-c)/c;
 let k=(p*(b+1)-1)/b*100;
 
-setValue("ev",ev);
-setValue("roi",roi.toFixed(2)+"%");
-setValue("be",be.toFixed(2));
-setValue("kelly",k.toFixed(2)+"%");
+update("ev",ev);
+update("roi",roi.toFixed(2)+"%");
+update("be",be.toFixed(2));
+update("kelly",k.toFixed(2)+"%");
 
-let worth="Neutral";
-let color="gray";
-
+let worth="Neutral",color="gray";
 if(ev>0&&roi>20){worth="Strong Positive EV";color="green";}
 else if(ev>0){worth="Slight Edge";color="yellow";}
 else if(ev<0){worth="Negative EV";color="red";}
 
-setText("worth",worth,color);
+updateText("worth",worth,color);
 }
 
 function simulate(){
-let p=parseFloat(document.getElementById("p").value);
-let r=parseFloat(document.getElementById("r").value);
-let c=parseFloat(document.getElementById("c").value);
-
+let p=parseFloat(p.value);
+let r=parseFloat(r.value);
+let c=parseFloat(c.value);
 if(isNaN(p)||isNaN(r)||isNaN(c)) return;
 
-let capital=0;
-let wins=0;
-
+let capital=0,wins=0;
 for(let i=0;i<100;i++){
-if(Math.random()<p){
-capital+=r-c;
-wins++;
-}else{
-capital-=c;
+if(Math.random()<p){capital+=r-c;wins++;}
+else{capital-=c;}
 }
-}
-
-document.getElementById("simResult").innerText =
-(zh?"模擬結果：\n總盈虧: ":"Simulation:\nTotal Profit: ")
+simResult.innerText=
+(zh?"模擬結果\n總盈虧: ":"Simulation\nTotal Profit: ")
 +capital+"\n"+
 (zh?"勝場: ":"Wins: ")+wins;
 }
 
-function setValue(id,val){
+function update(id,val){
 let el=document.getElementById(id);
 el.innerText=val;
 if(typeof val==="number"){
@@ -254,7 +269,7 @@ else el.className="value gray";
 }
 }
 
-function setText(id,text,color){
+function updateText(id,text,color){
 let el=document.getElementById(id);
 el.innerText=text;
 el.className="value "+color;
