--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
 
 body{
 font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",sans-serif;
-background:
-radial-gradient(circle at 20% 20%, #1c1c1c 0%, transparent 40%),
-radial-gradient(circle at 80% 80%, #111 0%, transparent 50%),
-linear-gradient(180deg,#000,#0a0a0a);
-color:white;
+background:linear-gradient(180deg,#050505,#0f0f0f 40%,#070707);
+color:#e5e7eb;
 min-height:100vh;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:80px 20px;
+padding:90px 20px;
 }
 
+/* Language Switch */
 .lang{
 position:absolute;
-top:30px;
+top:28px;
 right:40px;
-font-size:14px;
-color:#aaa;
+font-size:13px;
+color:#888;
 cursor:pointer;
 }
 
@@ -34,40 +32,52 @@ cursor:pointer;
 .hero{
 text-align:center;
 max-width:900px;
-margin-bottom:50px;
+margin-bottom:55px;
+}
+
+.badge{
+display:inline-block;
+padding:6px 16px;
+border-radius:999px;
+font-size:11px;
+letter-spacing:1px;
+background:#111;
+border:1px solid #222;
+color:#aaa;
+margin-bottom:20px;
 }
 
 .hero h1{
-font-size:60px;
+font-size:64px;
 font-weight:700;
-line-height:1.1;
-background:linear-gradient(90deg,#fff,#cfcfcf,#7a7a7a);
+line-height:1.05;
+background:linear-gradient(90deg,#ffffff,#d4d4d4,#888);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
 .hero p{
-margin-top:16px;
-color:#9ca3af;
-font-size:16px;
+margin-top:14px;
+color:#8a8a8a;
+font-size:15px;
 }
 
 /* CARD */
 .card{
-background:#111;
-border:1px solid #222;
+background:#0c0c0c;
+border:1px solid #1f1f1f;
 padding:32px;
-border-radius:24px;
+border-radius:22px;
 width:100%;
 max-width:560px;
-box-shadow:0 40px 120px rgba(0,0,0,.8);
+box-shadow:0 40px 120px rgba(0,0,0,.9);
 }
 
 .card-header{
 display:flex;
 align-items:center;
 gap:12px;
-margin-bottom:22px;
+margin-bottom:24px;
 font-weight:600;
 font-size:18px;
 }
@@ -75,43 +85,44 @@ font-size:18px;
 .icon{
 width:38px;
 height:38px;
-background:#1a1a1a;
-border:1px solid #2a2a2a;
+background:#151515;
+border:1px solid #222;
 border-radius:10px;
 display:flex;
 align-items:center;
 justify-content:center;
 }
 
+/* Inputs */
 .label{
 font-size:12px;
-color:#aaa;
+color:#777;
 margin-bottom:6px;
 }
 
 input{
 width:100%;
 padding:12px;
-border-radius:14px;
-border:1px solid #2a2a2a;
-background:#0f0f0f;
-color:white;
+border-radius:12px;
+border:1px solid #222;
+background:#111;
+color:#fff;
 margin-bottom:14px;
 font-size:14px;
 }
 
 input:focus{
 outline:none;
-border:1px solid #555;
+border:1px solid #444;
 }
 
-/* results */
+/* Results */
 .result{
 display:flex;
 justify-content:space-between;
 padding:8px 0;
 font-size:13px;
-border-bottom:1px solid #1f1f1f;
+border-bottom:1px solid #1a1a1a;
 }
 
 .value{
@@ -121,14 +132,14 @@ font-weight:600;
 .green{color:#22c55e;}
 .red{color:#ef4444;}
 .yellow{color:#facc15;}
-.gray{color:#e5e7eb;}
+.gray{color:#9ca3af;}
 
-/* button */
+/* Button */
 button{
 margin-top:20px;
 width:100%;
 padding:14px;
-border-radius:14px;
+border-radius:12px;
 border:none;
 background:#fff;
 color:#000;
@@ -138,17 +149,17 @@ transition:0.2s;
 }
 
 button:hover{
-opacity:0.85;
+opacity:0.9;
 }
 
-/* simulation */
+/* Simulation */
 .sim-box{
-margin-top:16px;
+margin-top:18px;
 font-size:13px;
 color:#aaa;
 white-space:pre-line;
-padding-top:10px;
-border-top:1px solid #222;
+padding-top:12px;
+border-top:1px solid #1a1a1a;
 }
 </style>
 </head>
@@ -158,6 +169,7 @@ border-top:1px solid #222;
 <div class="lang" onclick="toggleLang()">中文 / English</div>
 
 <div class="hero">
+<div class="badge">Advanced Expected Value Engine</div>
 <h1 id="title">Make calculated decisions.</h1>
 <p id="subtitle">Evaluate long-term outcomes before risking capital.</p>
 </div>
@@ -166,7 +178,7 @@ border-top:1px solid #222;
 
 <div class="card-header">
 <div class="icon">
-<svg width="18" height="18" stroke="#bbb" fill="none" viewBox="0 0 24 24">
+<svg width="18" height="18" stroke="#aaa" fill="none" viewBox="0 0 24 24">
 <rect x="4" y="3" width="16" height="18" rx="2"/>
 <line x1="8" y1="8" x2="16" y2="8"/>
 <line x1="8" y1="12" x2="12" y2="12"/>
