--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Decision Engine Pro</title>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
 
@@ -18,7 +20,6 @@ align-items:center;
 padding:90px 20px;
 }
 
-/* Language Switch */
 .lang{
 position:absolute;
 top:28px;
@@ -28,7 +29,6 @@ color:#888;
 cursor:pointer;
 }
 
-/* HERO */
 .hero{
 text-align:center;
 max-width:900px;
@@ -62,14 +62,13 @@ color:#8a8a8a;
 font-size:15px;
 }
 
-/* CARD */
 .card{
 background:#0c0c0c;
 border:1px solid #1f1f1f;
 padding:32px;
 border-radius:22px;
 width:100%;
-max-width:560px;
+max-width:650px;
 box-shadow:0 40px 120px rgba(0,0,0,.9);
 }
 
@@ -93,7 +92,6 @@ align-items:center;
 justify-content:center;
 }
 
-/* Inputs */
 .label{
 font-size:12px;
 color:#777;
@@ -116,7 +114,6 @@ outline:none;
 border:1px solid #444;
 }
 
-/* Results */
 .result{
 display:flex;
 justify-content:space-between;
@@ -134,7 +131,6 @@ font-weight:600;
 .yellow{color:#facc15;}
 .gray{color:#9ca3af;}
 
-/* Button */
 button{
 margin-top:20px;
 width:100%;
@@ -145,21 +141,15 @@ background:#fff;
 color:#000;
 font-weight:600;
 cursor:pointer;
-transition:0.2s;
 }
 
-button:hover{
-opacity:0.9;
+.chart-container{
+margin-top:30px;
 }
 
-/* Simulation */
-.sim-box{
-margin-top:18px;
-font-size:13px;
-color:#aaa;
-white-space:pre-line;
-padding-top:12px;
-border-top:1px solid #1a1a1a;
+canvas{
+background:#111;
+border-radius:12px;
 }
 </style>
 </head>
@@ -177,55 +167,34 @@ border-top:1px solid #1a1a1a;
 <div class="card">
 
 <div class="card-header">
-<div class="icon">
-<svg width="18" height="18" stroke="#aaa" fill="none" viewBox="0 0 24 24">
-<rect x="4" y="3" width="16" height="18" rx="2"/>
-<line x1="8" y1="8" x2="16" y2="8"/>
-<line x1="8" y1="12" x2="12" y2="12"/>
-<line x1="8" y1="16" x2="12" y2="16"/>
-</svg>
-</div>
+<div class="icon">📊</div>
 <span id="cardTitle">Expected Value Calculator</span>
 </div>
 
-<div class="label" id="pLabel">Probability (0~1)</div>
+<div class="label">Probability (0~1)</div>
 <input type="number" id="p" step="0.01">
 
-<div class="label" id="rLabel">Reward</div>
+<div class="label">Reward</div>
 <input type="number" id="r">
 
-<div class="label" id="cLabel">Cost</div>
+<div class="label">Cost</div>
 <input type="number" id="c">
 
-<div class="result"><span id="evText">Expected Value</span><span class="value gray" id="ev">-</span></div>
+<div class="result"><span>Expected Value</span><span class="value gray" id="ev">-</span></div>
 <div class="result"><span>ROI</span><span class="value gray" id="roi">-</span></div>
-<div class="result"><span id="beText">Break-even</span><span class="value gray" id="be">-</span></div>
-<div class="result"><span id="kellyText">Kelly %</span><span class="value gray" id="kelly">-</span></div>
-<div class="result"><span id="worthText">Worth</span><span class="value gray" id="worth">-</span></div>
+<div class="result"><span>Kelly %</span><span class="value gray" id="kelly">-</span></div>
+<div class="result"><span>Risk Level</span><span class="value gray" id="risk">-</span></div>
 
-<button onclick="simulate()" id="simBtn">Simulate 100 Runs</button>
+<button onclick="simulate()">Simulate 100 Runs</button>
 
-<div class="sim-box" id="simResult"></div>
+<div class="chart-container">
+<canvas id="capitalChart"></canvas>
+</div>
 
 </div>
 
 <script>
-let zh=false;
-
-function toggleLang(){
-zh=!zh;
-title.innerText=zh?"做出精準決策":"Make calculated decisions.";
-subtitle.innerText=zh?"在投入資金前先評估長期結果":"Evaluate long-term outcomes before risking capital.";
-cardTitle.innerText=zh?"期望值計算器":"Expected Value Calculator";
-pLabel.innerText=zh?"機率 (0~1)":"Probability (0~1)";
-rLabel.innerText=zh?"獎勵":"Reward";
-cLabel.innerText=zh?"成本":"Cost";
-evText.innerText=zh?"期望值":"Expected Value";
-beText.innerText=zh?"損益平衡":"Break-even";
-kellyText.innerText=zh?"Kelly 比例":"Kelly %";
-worthText.innerText=zh?"價值判斷":"Worth";
-simBtn.innerText=zh?"模擬 100 次":"Simulate 100 Runs";
-}
+let chart;
 
 document.querySelectorAll("input").forEach(i=>i.addEventListener("input",calculate));
 
@@ -233,25 +202,19 @@ function calculate(){
 let p=parseFloat(p.value);
 let r=parseFloat(r.value);
 let c=parseFloat(c.value);
-if(isNaN(p)||isNaN(r)||isNaN(c)){reset();return;}
+if(isNaN(p)||isNaN(r)||isNaN(c)) return;
 
 let ev=p*r-c;
 let roi=(ev/c)*100;
-let be=c/r;
 let b=(r-c)/c;
 let k=(p*(b+1)-1)/b*100;
 
 update("ev",ev);
 update("roi",roi.toFixed(2)+"%");
-update("be",be.toFixed(2));
 update("kelly",k.toFixed(2)+"%");
 
-let worth="Neutral",color="gray";
-if(ev>0&&roi>20){worth="Strong Positive EV";color="green";}
-else if(ev>0){worth="Slight Edge";color="yellow";}
-else if(ev<0){worth="Negative EV";color="red";}
-
-updateText("worth",worth,color);
+if(ev>0) updateText("risk","Low Risk","green");
+else updateText("risk","High Risk","red");
 }
 
 function simulate(){
@@ -260,15 +223,36 @@ let r=parseFloat(r.value);
 let c=parseFloat(c.value);
 if(isNaN(p)||isNaN(r)||isNaN(c)) return;
 
-let capital=0,wins=0;
+let capital=0;
+let data=[0];
+
 for(let i=0;i<100;i++){
-if(Math.random()<p){capital+=r-c;wins++;}
-else{capital-=c;}
+if(Math.random()<p) capital+=r-c;
+else capital-=c;
+data.push(capital);
 }
-simResult.innerText=
-(zh?"模擬結果\n總盈虧: ":"Simulation\nTotal Profit: ")
-+capital+"\n"+
-(zh?"勝場: ":"Wins: ")+wins;
+
+if(chart) chart.destroy();
+
+chart=new Chart(document.getElementById("capitalChart"),{
+type:'line',
+data:{
+labels:data.map((_,i)=>i),
+datasets:[{
+data:data,
+borderColor:'#22c55e',
+borderWidth:2,
+tension:0.3
+}]
+},
+options:{
+plugins:{legend:{display:false}},
+scales:{
+x:{display:false},
+y:{grid:{color:"#222"}}
+}
+}
+});
 }
 
 function update(id,val){
@@ -276,8 +260,7 @@ let el=document.getElementById(id);
 el.innerText=val;
 if(typeof val==="number"){
 if(val>0) el.className="value green";
-else if(val<0) el.className="value red";
-else el.className="value gray";
+else el.className="value red";
 }
 }
 
@@ -285,13 +268,6 @@ function updateText(id,text,color){
 let el=document.getElementById(id);
 el.innerText=text;
 el.className="value "+color;
-}
-
-function reset(){
-["ev","roi","be","kelly","worth"].forEach(id=>{
-document.getElementById(id).innerText="-";
-document.getElementById(id).className="value gray";
-});
 }
 </script>
 
