--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="zh">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Decision Engine Pro</title>
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<title>Decision Engine</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
@@ -17,10 +15,9 @@ min-height:100vh;
 display:flex;
 flex-direction:column;
 align-items:center;
-padding:80px 20px;
+padding:70px 20px;
 }
 
-/* Language */
 .lang{
 position:absolute;
 top:25px;
@@ -30,65 +27,28 @@ color:#888;
 cursor:pointer;
 }
 
-/* HERO */
-.hero{
-text-align:center;
-margin-bottom:50px;
-}
-
-.badge{
-display:inline-block;
-padding:6px 16px;
-border-radius:999px;
-font-size:11px;
-background:#111;
-border:1px solid #222;
-color:#aaa;
-margin-bottom:18px;
-}
+.hero{text-align:center;margin-bottom:40px;}
 
 .hero h1{
-font-size:56px;
+font-size:42px;
 font-weight:700;
 background:linear-gradient(90deg,#fff,#bbb,#777);
 -webkit-background-clip:text;
 -webkit-text-fill-color:transparent;
 }
 
-.hero p{
-margin-top:12px;
-color:#888;
-font-size:14px;
-}
+.hero p{margin-top:10px;color:#777;font-size:14px;}
 
-/* CARD */
 .card{
 background:#0c0c0c;
 border:1px solid #1f1f1f;
-padding:28px;
-border-radius:20px;
+padding:25px;
+border-radius:18px;
 width:100%;
-max-width:650px;
+max-width:600px;
 }
 
-/* ICON */
-.icon{
-width:34px;
-height:34px;
-background:#151515;
-border:1px solid #222;
-border-radius:8px;
-display:flex;
-align-items:center;
-justify-content:center;
-margin-bottom:15px;
-}
-
-.label{
-font-size:12px;
-color:#777;
-margin-bottom:6px;
-}
+.label{font-size:12px;color:#777;margin:8px 0;}
 
 input{
 width:100%;
@@ -97,10 +57,9 @@ border-radius:10px;
 border:1px solid #222;
 background:#111;
 color:white;
-margin-bottom:12px;
+margin-bottom:10px;
 }
 
-/* RESULTS */
 .result{
 display:flex;
 justify-content:space-between;
@@ -115,9 +74,8 @@ border-bottom:1px solid #1a1a1a;
 .yellow{color:#facc15;}
 .gray{color:#9ca3af;}
 
-/* BUTTON */
 button{
-margin-top:18px;
+margin-top:15px;
 width:100%;
 padding:12px;
 border-radius:10px;
@@ -127,12 +85,6 @@ color:#000;
 font-weight:600;
 cursor:pointer;
 }
-
-canvas{
-margin-top:25px;
-background:#111;
-border-radius:12px;
-}
 </style>
 </head>
 
@@ -141,21 +93,11 @@ border-radius:12px;
 <div class="lang" onclick="toggleLang()">中文 / English</div>
 
 <div class="hero">
-<div class="badge" id="badge">Advanced Expected Value Engine</div>
-<h1 id="title">Make calculated decisions.</h1>
-<p id="subtitle">Evaluate long-term outcomes before risking capital.</p>
+<h1 id="title">Decision Engine</h1>
+<p id="subtitle">Evaluate long-term edge before risking capital.</p>
 </div>
 
 <div class="card">
-
-<div class="icon">
-<svg width="18" height="18" stroke="#aaa" fill="none" viewBox="0 0 24 24">
-<rect x="4" y="3" width="16" height="18" rx="2"/>
-<line x1="8" y1="8" x2="16" y2="8"/>
-<line x1="8" y1="12" x2="12" y2="12"/>
-<line x1="8" y1="16" x2="12" y2="16"/>
-</svg>
-</div>
 
 <div class="label" id="pLabel">Probability (0~1)</div>
 <input type="number" id="p" step="0.01">
@@ -166,29 +108,31 @@ border-radius:12px;
 <div class="label" id="cLabel">Cost</div>
 <input type="number" id="c">
 
+<div class="label">Bankroll (optional)</div>
+<input type="number" id="bank">
+
 <div class="result"><span id="evText">Expected Value</span><span class="value gray" id="ev">-</span></div>
 <div class="result"><span>ROI</span><span class="value gray" id="roi">-</span></div>
 <div class="result"><span id="beText">Break-even</span><span class="value gray" id="be">-</span></div>
 <div class="result"><span id="kellyText">Kelly %</span><span class="value gray" id="kelly">-</span></div>
+<div class="result"><span>Half Kelly</span><span class="value gray" id="half">-</span></div>
 <div class="result"><span id="worthText">Worth</span><span class="value gray" id="worth">-</span></div>
-<div class="result"><span id="riskText">Risk Level</span><span class="value gray" id="risk">-</span></div>
+<div class="result"><span id="riskText">Risk</span><span class="value gray" id="risk">-</span></div>
 
-<button onclick="simulate()" id="simBtn">Simulate 100 Runs</button>
+<div class="result"><span id="simProfitText">Sim Profit (100)</span><span class="value gray" id="simProfit">-</span></div>
+<div class="result"><span id="simDDText">Max Drawdown</span><span class="value gray" id="simDD">-</span></div>
 
-<canvas id="chart" height="100"></canvas>
+<button onclick="simulate()">Simulate 100 Runs</button>
 
 </div>
 
 <script>
 let zh=false;
-let chart;
 
-/* Language */
 function toggleLang(){
 zh=!zh;
-badge.innerText=zh?"進階期望值引擎":"Advanced Expected Value Engine";
-title.innerText=zh?"做出精準決策":"Make calculated decisions.";
-subtitle.innerText=zh?"在投入資金前先評估長期結果":"Evaluate long-term outcomes before risking capital.";
+title.innerText=zh?"決策引擎":"Decision Engine";
+subtitle.innerText=zh?"在投入資金前先評估長期優勢":"Evaluate long-term edge before risking capital.";
 pLabel.innerText=zh?"機率 (0~1)":"Probability (0~1)";
 rLabel.innerText=zh?"獎勵":"Reward";
 cLabel.innerText=zh?"成本":"Cost";
@@ -196,17 +140,19 @@ evText.innerText=zh?"期望值":"Expected Value";
 beText.innerText=zh?"損益平衡":"Break-even";
 kellyText.innerText=zh?"Kelly 比例":"Kelly %";
 worthText.innerText=zh?"價值判斷":"Worth";
-riskText.innerText=zh?"風險等級":"Risk Level";
-simBtn.innerText=zh?"模擬 100 次":"Simulate 100 Runs";
+riskText.innerText=zh?"風險等級":"Risk";
+simProfitText.innerText=zh?"模擬總盈虧":"Sim Profit (100)";
+simDDText.innerText=zh?"最大回撤":"Max Drawdown";
 }
 
-/* Auto Calculate */
 document.querySelectorAll("input").forEach(i=>i.addEventListener("input",calculate));
 
 function calculate(){
 let p=parseFloat(p.value);
 let r=parseFloat(r.value);
 let c=parseFloat(c.value);
+let bank=parseFloat(bank.value);
+
 if(isNaN(p)||isNaN(r)||isNaN(c)){reset();return;}
 
 let ev=p*r-c;
@@ -219,28 +165,34 @@ update("ev",ev);
 update("roi",roi.toFixed(2)+"%");
 update("be",be.toFixed(3));
 update("kelly",k.toFixed(2)+"%");
+update("half",(k/2).toFixed(2)+"%");
 
-/* Worth */
-if(ev>0 && roi>20) updateText("worth","Strong Positive EV","green");
+if(ev>0 && roi>20) updateText("worth","Strong Positive","green");
 else if(ev>0) updateText("worth","Slight Edge","yellow");
-else updateText("worth","Negative EV","red");
+else updateText("worth","Negative","red");
 
-/* Risk */
 if(ev>0) updateText("risk","Low","green");
 else updateText("risk","High","red");
+
+if(!isNaN(bank) && k>0){
+let stake=bank*(k/100);
+update("half",(stake/2).toFixed(2));
+}
 }
 
-/* Simulation */
 function simulate(){
 let p=parseFloat(p.value);
 let r=parseFloat(r.value);
 let c=parseFloat(c.value);
-if(isNaN(p)||isNaN(r)||isNaN(c)) return;
+
+if(isNaN(p)||isNaN(r)||isNaN(c)){
+alert("Please enter Probability, Reward and Cost.");
+return;
+}
 
 let capital=0;
 let peak=0;
 let maxDD=0;
-let data=[0];
 
 for(let i=0;i<100;i++){
 if(Math.random()<p) capital+=r-c;
@@ -249,40 +201,11 @@ else capital-=c;
 if(capital>peak) peak=capital;
 let dd=peak-capital;
 if(dd>maxDD) maxDD=dd;
-
-data.push(capital);
 }
 
-drawChart(data);
+update("simProfit",capital);
+update("simDD",maxDD);
 }
-
-/* Chart */
-function drawChart(data){
-if(chart) chart.destroy();
-
-chart=new Chart(document.getElementById("chart"),{
-type:"line",
-data:{
-labels:data.map((_,i)=>i),
-datasets:[{
-data:data,
-borderColor:"#22c55e",
-borderWidth:2,
-tension:0.25
-}]
-},
-options:{
-plugins:{legend:{display:false}},
-scales:{
-x:{display:false},
-y:{grid:{color:"#222"}}
-}
-}
-});
-}
-
-/* Initial flat line */
-drawChart(Array(101).fill(0));
 
 function update(id,val){
 let el=document.getElementById(id);
@@ -300,7 +223,7 @@ el.className="value "+color;
 }
 
 function reset(){
-["ev","roi","be","kelly","worth","risk"].forEach(id=>{
+["ev","roi","be","kelly","half","worth","risk"].forEach(id=>{
 document.getElementById(id).innerText="-";
 document.getElementById(id).className="value gray";
 });
